# mpm_rust

./: .gitignore  Cargo.toml  README.md  example.sh
examples/: Cargo.toml
examples/examples/: mlsmpm.rs
grpc_server/: Cargo.toml
grpc_server/proto/: particle.proto
grpc_server/src/: main.rs
mlsmpm/: Cargo.toml
mlsmpm/src/: boundary.rs  (+7 more)
mlsmpm_3d/: Cargo.toml
mpm_rust/: .gitignore  Cargo.toml  docker-compose.yml
mpm_rust/grpc_server/: Cargo.toml  build.rs
mpm_rust/grpc_server/proto/: particle.proto
mpm_rust/grpc_server/src/: main.rs
mpm_rust/viewer/: Cargo.toml
mpm_rust/viewer/examples/: dambreak.rs  dambreak_linear.rs  dambreak_lsmps.rs  dambreak_qubic.rs  poiseuille.rs  poiseuille_full_compact.rs  poiseuille_full_lsmps.rs  poiseuille_full_lsmps_compact.rs  poiseuille_full_lsmps_linear.rs  random_taylorgreen_particles.rs  taylorgreen.rs  taylorgreen_compare.rs  taylorgreen_full_compact.rs  taylorgreen_full_lsmps.rs  taylorgreen_full_lsmps_3rd.rs  taylorgreen_full_lsmps_compact.rs  taylorgreen_full_lsmps_linear.rs  taylorgreen_g2p_linear_lsmps.rs  taylorgreen_g2p_lsmps.rs  taylorgreen_linear.rs  taylorgreen_p2g_compact.rs  taylorgreen_p2g_compact_linear.rs  taylorgreen_p2g_compact_vel.rs  taylorgreen_p2g_lsmps.rs  taylorgreen_p2g_lsmps_force.rs  taylorgreen_p2g_lsmps_linear.rs  taylorgreen_qubic.rs
mpm_rust/viewer/src/: executor.rs  file.rs  lib.rs  main.rs  shader.wgsl  window.rs  window_bevy.rs  window_wgpu.rs
particle_viewer/: package-lock.json  package.json  server.js
src/: lib.rs  main.rs
viewer/: Cargo.toml
viewer_3d/: Cargo.toml
(+99 files in other folders)
