[package]
name = "pic_grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
tonic-reflection = "0.6"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
mlsmpm = { path = "../mlsmpm" }

[build-dependencies]
tonic-build = "0.8"