[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
mlsmpm = { path = "../mlsmpm" }
piston_window = "0.127.0"
cfg-if = "1"
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = "1.13.1"
bevy="0.10"
bevy_points="0.2"